--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,87 @@
 body {
     font-family: "Space Mono", monospace;
     font-weight: 400;
+    color: var(--clr-primary-500);
 }
 
 img {
     display: block;
     width: 100%;
 }
+
+/*================*/
+/*= Main
+/*================*/
+.main {
+    min-height: 100vh;
+    background-color: var(--clr-dark-mode-200);
+
+    padding-top: 10rem;
+}
+
+.center {
+    margin: 0 auto;
+}
+
+.wrapper {
+    width: 85vw;
+    max-width: var(--max-width-300);
+}
+
+/*================*/
+/*= Nav
+/*================*/
+.navbar {
+    height: 4rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title {
+    font-size: var(--fs-title);
+    font-weight: 700;
+}
+
+.nav-btn {
+    background-color: transparent;
+    border: none;
+    font-size: var(--fs-toggle);
+    font-weight: 700;
+    cursor: pointer;
+
+    display: none;
+}
+
+.light, .dark {
+    color: inherit;
+}
+
+.show {
+    display: flex;
+    gap: 0 1rem;
+    align-items: center;
+}
+
+.icon {
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
