--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,23 @@ img {
 
 }
 
+/*================*/
+/*= Error
+/*================*/
+.error {
+    margin-top: 5rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.error-icon {
+    display: block;
+    font-size: 4rem;
+    margin-bottom: 3rem;
+}
+
 @media screen and (min-width: 573px) {
     .form {
         gap: 0 1rem;
